final touches to make the pdf's look better

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive CV - Max Day</title>
+    <title>Max Day CV</title>
+    <link rel="icon" href="/images/image.jpg" type="image/jpeg">
     <link rel="stylesheet" href="styles.css">
     <style>
 
@@ -279,7 +280,7 @@
                 </div>
                 <br>
                 
-                <button class="animated-button" id="contact-button">Send Message</button>
+              
             </div>
         </div>
     </section>
