Changed some of the images aswell as some text layout. Added logo

--- a/public/index.html
+++ b/public/index.html
@@ -5,32 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Max Day CV</title>
-    <link rel="icon" href="/images/image.jpg" type="image/jpeg">
+    <link rel="icon" href="/images/logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
-    <style>
-        :root {
-            --primary-color: #6366f1;
-            --secondary-color: #3b82f6;
-            --accent-color: #60a5fa;
-            --text-color: #e2e8f0;
-            --background-color: #0f172a;
-            --dark-background: #1e293b;
-            --card-color: rgba(30, 41, 59, 0.9);
-            --shadow-color: rgba(0, 0, 0, 0.3);
-        }
-
-        body {
-            color: var(--text-color);
-            background-color: var(--background-color);
-        }
-
-        .location {
-            font-style: italic;
-            color: #94a3b8;
-            text-align: right;
-            margin-top: 10px;
-        }
-    </style>
 </head>
 
 <body>
@@ -38,7 +14,7 @@
 
     <header>
         <div class="container">
-            <img src="/images/image.jpg" alt="Profile Picture" class="profile-img">
+            <img src="/images/image.jpg?v=2" alt="Profile Picture" class="profile-img">
             <h1>Max Day</h1>
             <p class="title">Full-Stack Software Developer</p>
             <div class="contact-info">
@@ -46,7 +22,7 @@
                 <a href="tel:+0721050898">0721050898</a>
                 <a href="#">South Africa</a>
             </div>
-            <button class="animated-button" id="download-cv">Download CV</button>
+            <button class="animated-button" id="download-cv">Download PDF CV</button>
         </div>
     </header>
 
@@ -68,7 +44,7 @@
         <div class="container">
             <h2 class="section-title">About</h2>
             <div class="card">
-                <p>I am a third-year Computer Science student currently studying at Varsity College. I possess multiple years of programming experience both through my coursework and independent projects, and a passion for full-stack development and problem-solving. I possess a wide range of programming skills, with a focus on web development using JavaScript and TypeScript, and strong foundations in C/C++ development as well as C# and Java systems.</p>
+                <p>I am a third-year Computer Science student currently studying at Varsity College. I possess multiple years of programming experience both through my coursework and independent projects. I have a passion for full-stack development and problem-solving. I possess a wide range of programming skills, with a focus on web development using JavaScript and TypeScript, and strong foundations in C/C++ development as well as C# and Java systems.</p>
 
                 <p>My main interests lie in developing robust backend systems while integrating them with clean, well-developed frontend interfaces. I also have experience with C# and the .NET framework for web application development as part of my degree program and Java as part of my high school studies. Many of my projects utilise Deno/Node.js as backend technologies paired with clean front-end web UI to create intuitive user-friendly interfaces. I have experience with databases, both SQL and NoSQL systems, as well as database server solutions and how to integrate them into projects. I particularly enjoy integrating low-level C code with web development and bridging APIs. I also have experience with microcontrollers particularly though projects related to writing C code to STM32 chips. I have designed my own PCBs and circuitry systems in the work environment as well as at home.</p>
 
@@ -85,10 +61,9 @@
 
             <div class="card">
                 <span class="date">Nov 2024 - Jun 2025</span>
-                <h3>Software Developer</h3>
+                <h3>Software Developer <span class="position-type">(Part-time)</span></h3>
                 <h4>BSI Electronics</h4>
-                <p>Led API integration development for upcoming electronic systems and worked on embedded control systems programming.</p>
-                <br>
+                <p>Led API integration development for upcoming electronic systems and worked on embedded control systems programming. Position concluded to focus on final year studies.</p>
                 <ul>
                     <li>Led API integration development for upcoming electronic systems</li>
                     <li>Assembled electronic units, including soldering and component manufacturing</li>
@@ -102,10 +77,9 @@
 
             <div class="card">
                 <span class="date">Jul 2023 - Aug 2023</span>
-                <h3>Software Tester</h3>
+                <h3>Software Tester <span class="position-type">(Freelance)</span></h3>
                 <h4>Unlogged (YC S22)</h4>
-                <p>Tested and provided feedback on the Unlogged plugin for IntelliJ IDE in a remote capacity.</p>
-                <br>
+                <p>Tested and provided feedback on the Unlogged plugin for IntelliJ IDE in a remote freelance capacity.</p>
                 <ul>
                     <li>I was tasked with daily driving the newly created Unlogged plugin in the IntelliJ IDE</li>
                     <li>I wrote feedback on how the plugin performed in QA environments and how it could be improved</li>
@@ -114,11 +88,10 @@
             </div>
 
             <div class="card">
-                <span class="date">Jan 2022 - Jul 2022</span>
-                <h3>Design Engineer and Programmer</h3>
+                <span class="date">Jan 2022 - Mar 2022</span>
+                <h3>Design Engineer and Programmer <span class="position-type">(Part-time)</span></h3>
                 <h4>Lorbrand</h4>
-                <p>Was part of a development team that aided in the design of a coil winding system.</p>
-                <br>
+                <p>Part of a development team that aided in the design of a coil winding system. Position concluded to focus on studies.</p>
                 <ul>
                     <li>Helped design in CAD and program a system to wind spindles of coils</li>
                     <li>Collaborated with development team on mechanical and software integration</li>
