Added cover page pdf

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                 <a href="tel:+0721050898">0721050898</a>
                 <a href="#">South Africa</a>
             </div>
-            <button class="animated-button" id="download-cv">Download PDF CV</button>
+            <button class="animated-button" id="download-cv">Preview CV PDF</button>
         </div>
     </header>
 
@@ -374,7 +374,7 @@
     <!-- Three.js from CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <!-- Main JavaScript -->
-    <script src="main.js"></script>
+    <script src="main.js?v=2"></script>
 </body>
 
 </html>
