--- a/public/index.html
+++ b/public/index.html
@@ -40,17 +40,17 @@
         </div>
     </nav>
 
-        <section id="about">
+    <section id="about">
         <div class="container">
             <h2 class="section-title">About</h2>
             <div class="card">
-                <p>I am a third-year Computer Science student currently studying at Varsity College. I possess multiple years of programming experience both through my coursework and independent projects. I have a passion for full-stack development and problem-solving. I possess a wide range of programming skills, with a focus on web development using JavaScript and TypeScript, and strong foundations in C/C++ development as well as C# and Java systems.</p>
+                <p>I am in my third and final year of Computer Science at Varsity College. I have a passion for full-stack development and problem-solving and I offer a wide range of programming skills, with a focus on web development using JavaScript and TypeScript, and strong foundations in C/C++ development, C#, the .NET framework and Java systems.</p>
 
-                <p>My main interests lie in developing robust backend systems while integrating them with clean, well-developed frontend interfaces. I also have experience with C# and the .NET framework for web application development as part of my degree program and Java as part of my high school studies. Many of my projects utilise Deno/Node.js as backend technologies paired with clean front-end web UI to create intuitive user-friendly interfaces. I have experience with databases, both SQL and NoSQL systems, as well as database server solutions and how to integrate them into projects. I particularly enjoy integrating low-level C code with web development and bridging APIs. I also have experience with microcontrollers particularly though projects related to writing C code to STM32 chips. I have designed my own PCBs and circuitry systems in the work environment as well as at home.</p>
+                <p>My main interests lie in developing robust backend systems while integrating them with clean, well-developed frontend interfaces. Many of my projects utilise Deno/Node.js as backend technologies paired with clean front-end web UI to create intuitive user-friendly interfaces. I have experience with databases, both SQL and NoSQL systems, writing C code to STM32 chips, as well as database server solutions. I have designed PCBs and circuitry systems.</p>
 
-                <p>I have a deep interest in Linux CLI server environments and have been building my own home server network utilising Ubiquiti systems, network layouts, and Cisco systems (switch, router and ASA systems). I currently run two homelab servers and I have experience with the deployment of such systems. This hands-on experience has strengthened my understanding of network architecture and server management while giving me core knowledge of how to deploy such technologies.</p>
+                <p>I have a deep interest in Linux CLI server environments and have been building my own home server network utilising Ubiquiti systems, network layouts, and Cisco systems (switch, router and ASA systems). I currently run two homelab servers. This hands-on experience has strengthened my understanding of network architecture and server management while giving me core knowledge of how to deploy such technologies.</p>
 
-                <p>I am highly adaptable and focused, dedicating myself to meeting unique project demands to the best of my ability. I am confident I can ensure high-quality work delivery.</p>
+                <p>I am highly adaptable, focussed and dedicated to meeting unique project demands to the best of my ability. I am confident I can ensure high-quality work delivery.</p>
             </div>
         </div>
     </section>
@@ -63,7 +63,8 @@
                 <span class="date">Nov 2024 - Jun 2025</span>
                 <h3>Software Developer <span class="position-type">(Part-time)</span></h3>
                 <h4>BSI Electronics</h4>
-                <p>Led API integration development for upcoming electronic systems and worked on embedded control systems programming. Position concluded to focus on final year studies.</p>
+                <p>Led API integration development for upcoming electronic systems and worked on embedded control
+                    systems programming. Position concluded to focus on final year studies.</p>
                 <ul>
                     <li>Led API integration development for upcoming electronic systems</li>
                     <li>Assembled electronic units, including soldering and component manufacturing</li>
@@ -79,10 +80,12 @@
                 <span class="date">Jul 2023 - Aug 2023</span>
                 <h3>Software Tester <span class="position-type">(Freelance)</span></h3>
                 <h4>Unlogged (YC S22)</h4>
-                <p>Tested and provided feedback on the Unlogged plugin for IntelliJ IDE in a remote freelance capacity.</p>
+                <p>Tested and provided feedback on the Unlogged plugin for IntelliJ IDE in a remote freelance capacity.
+                </p>
                 <ul>
                     <li>I was tasked with daily driving the newly created Unlogged plugin in the IntelliJ IDE</li>
-                    <li>I wrote feedback on how the plugin performed in QA environments and how it could be improved</li>
+                    <li>I wrote feedback on how the plugin performed in QA environments and how it could be improved
+                    </li>
                 </ul>
                 <p class="location">Remote, California, United States</p>
             </div>
@@ -91,7 +94,8 @@
                 <span class="date">Jan 2022 - Mar 2022</span>
                 <h3>Design Engineer and Programmer <span class="position-type">(Part-time)</span></h3>
                 <h4>Lorbrand</h4>
-                <p>Part of a development team that aided in the design of a coil winding system. Position concluded to focus on studies.</p>
+                <p>Part of a development team that aided in the design of a coil winding system. Position concluded to
+                    focus on studies.</p>
                 <ul>
                     <li>Helped design in CAD and program a system to wind spindles of coils</li>
                     <li>Collaborated with development team on mechanical and software integration</li>
@@ -102,7 +106,7 @@
         </div>
     </section>
 
-                <section id="education">
+    <section id="education">
         <div class="container">
             <h2 class="section-title">Education</h2>
 
@@ -110,13 +114,17 @@
                 <span class="date">2023 - 2025 (expected)</span>
                 <h3>Bachelor of Computer and Information Sciences in Application Development</h3>
                 <h4>Varsity College</h4>
-                <p>Currently in my third and final year, focusing on C# development and MVC architectural patterns. I have
+                <p>Currently in my third and final year, focusing on C# development and MVC architectural patterns. I
+                    have
                     hands-on experience building web applications using the .NET framework, deploying systems through
                     Azure cloud services, and working extensively with both SQL and NoSQL database structures. My
                     coursework has strengthened my knowledge of web development and deployment workflows. In my third
                     year we have begun focusing on Android app development.</p>
                 <p><strong>Academic Performance:</strong> 11 distinctions out of 16 subjects completed</p>
-                <p><strong>Awards:</strong> The Aggregate Distinction Award - received for every year study. This award is calculated from an overall programme average of 75% in the previous academic year, on a complete module load required per the minimum completion time of the qualification for contact and a minimum of six modules in the previous year for distance studies.</p>
+                <p><strong>Awards:</strong> The Aggregate Distinction Award - received for every year study. This award
+                    is calculated from an overall programme average of 75% in the previous academic year, on a complete
+                    module load required per the minimum completion time of the qualification for contact and a minimum
+                    of six modules in the previous year for distance studies.</p>
                 <p><strong>Semester Marks:</strong></p>
                 <div class="semester-buttons">
                     <button class="animated-button" id="semester-1">Semester 1</button>
@@ -135,13 +143,14 @@
                 <h4>St John's College, Houghton, South Africa</h4>
                 <p>Completed my high school education with a focus on science and mathematics. Achieved excellent
                     results in the IEB curriculum. During this time I took IT and was taught the structures of Object
-                    Oriented Programming and the groundwork to be able to pick up many of the langauges I use currently.</p>
+                    Oriented Programming and the groundwork to be able to pick up many of the langauges I use currently.
+                </p>
                 <p><strong>Achievement:</strong> Top 1% in matric for IT</p>
             </div>
         </div>
     </section>
 
-        <section id="skills">
+    <section id="skills">
         <div class="container">
             <h2 class="section-title">Skills</h2>
 
@@ -288,22 +297,24 @@
         </div>
     </section>
 
-        <section id="projects">
+    <section id="projects">
         <div class="container">
             <h2 class="section-title">Projects</h2>
 
             <div class="card">
                 <div style="text-align: center; margin-bottom: 30px;">
                     <h3 style="margin-bottom: 15px;">Want to see more of my work?</h3>
-                    <p style="margin-bottom: 20px; color: var(--accent-color);">Check out my dedicated projects page where I share detailed insights, code examples, and thoughts on various development projects, or browse my GitHub repositories.</p>
+                    <p style="margin-bottom: 20px; color: var(--accent-color);">Check out my dedicated projects page
+                        where I share detailed insights, code examples, and thoughts on various development projects, or
+                        browse my GitHub repositories.</p>
                     <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
                         <a href="https://projects.penguinjelly.co.za" target="_blank" class="animated-button"
                             style="text-decoration: none; display: inline-block;">
-                             View My Projects & Blog
+                            View My Projects & Blog
                         </a>
                         <a href="https://github.com/Max0xDay" target="_blank" class="animated-button"
                             style="text-decoration: none; display: inline-block;">
-                             GitHub Repositories
+                            GitHub Repositories
                         </a>
                     </div>
                 </div>
