took out testimonials for now

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
                 <li><a href="#education">Education</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
+                <!-- <li><a href="#testimonials">Testimonials</a></li> -->
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -322,6 +322,7 @@
         </div>
     </section>
 
+    <!-- TESTIMONIALS SECTION - TEMPORARILY HIDDEN
     <section id="testimonials">
         <div class="container">
             <h2 class="section-title">Testimonials</h2>
@@ -334,6 +335,7 @@
             </div>
         </div>
     </section>
+    -->
 
 
     <section id="contact">
